# myPythonTool

./: .gitignore  BẮT_ĐẦU_TẠI_ĐÂY.md  CHANGELOG.md  HUONG_DAN.txt  INSTALL.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  REFACTORING.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.txt  START_HERE.txt  STRUCTURE.md  UPGRADE_SUMMARY.md  __main__.py  menu.py  myptool.bat  pyproject.toml  requirements.txt  run.bat  run.sh  setup.py  ssh_config.example.json  tool_config.json
archive/: README.md  config.py
docs/: CHANGELOG.md  INSTALL.md  PORTABILITY.md  README.md
menu/: README.md  __init__.py  ssh.py  tool_config.json  tool_manager.py
menus/: __init__.py  tool_config.json  tool_manager.py
myPythonTool/: CHANGELOG.md  HUONG_DAN.txt  QUICK_REFERENCE.md  README.md  START_HERE.txt  menu-ssh.py  menu.py  requirements.txt
myPythonTool/tool/: backup-folder.py  clean-temp-files.py  compress-images.py  copy-changed-files.py  duplicate-finder.py  extract-archive.py  file-organizer.py  find-and-replace.py  generate-tree.py  rename-files.py  text-encoding-converter.py
scripts/: README.md  create-tool.bat  create-tool.py  myptool.bat  myptool.sh
tool/: README.md  README_SSH.md  backup-folder.py  clean-temp-files.py  compress-images.py  duplicate-finder.py  extract-archive.py  find-and-replace.py  generate-tree.py  image-watermark.py  pdf-tools.py  rename-files.py  ssh-manager.py  text-encoding-converter.py  video-converter.py
tool/backup-folder/: README.md
tool/clean-temp-files/: clean-temp-files.py
tool/compress-images/: __init__.py
tool/copy-changed-files/: __init__.py  copy-changed-files.py
tool/extract-archive/: __init__.py  extract-archive.py
tool/file-organizer/: __init__.py
tool/find-and-replace/: README.md  __init__.py
tool/image-watermark/: image-watermark.py
tool/pdf-tools/: pdf-tools.py
tool/rename-files/: __init__.py
tool/ssh-manager/: README.md  __init__.py  ssh-manager.py  ssh_config.example.json
tool/video-converter/: __init__.py
tools/: README.md
tools/compress-images/: README.md
tools/extract-archive/: README.md
tools/file-organizer/: README.md
tools/generate-tree/: README.md  generate-tree.py
tools/image-watermark/: __init__.py  doc.py
tools/pdf-tools/: __init__.py
tools/py/backup-folder/: README.md  __init__.py  doc.py  tool_info.json
tools/py/barcode-qr-decoder/: __init__.py  barcode-qr-decoder.py  doc.py  tool_info.json
tools/py/clean-temp-files/: README.md  __init__.py  doc.py  tool_info.json
tools/py/compress-images/: README.md  compress-images.py  doc.py  tool_info.json
tools/py/copy-changed-files/: README.md  copy-changed-files.py  copy-changed-files_config.example.json  copy-changed-files_config.json  doc.py  (+1 more)
tools/text-encoding-converter/: README.md  text-encoding-converter.py
utils/: __init__.py  categories.py  colors.py  common.py  file_ops.py  format.py  helpers.py  logger.py  progress.py  ui.py  validation.py
(+158 files in other folders)
