# pyproject.toml - Cấu hình modern cho Python package
# 
# Mục đích: File cấu hình theo chuẩn PEP 518/621
# Cho phép cài đặt tool như một command toàn cục
#
# Cách cài đặt:
#     pip install -e .        # Development mode (khuyến nghị)
#     pip install .           # Cài đặt bình thường
#
# Sau khi cài, chạy bằng lệnh: myptool

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "myPythonTool"
version = "1.0.0"
description = "Bộ công cụ Python đa năng cho các tác vụ hàng ngày"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "V.H.Nam", email = "vhnam18032002@gmail.com"}
]
keywords = ["utilities", "tools", "file-management", "automation"]

# Dependencies chính
dependencies = [
    "Pillow>=10.0.0",
    "chardet>=5.0.0",
    "PyPDF2>=3.0.0",
    "pdf2image>=1.16.0",
    "moviepy>=1.0.3",
    "colorama>=0.4.6",  # Cross-platform colored terminal output
    "qrcode>=7.4.2",  # Tạo QR code
    "opencv-python>=4.8.0",  # Giải mã QR code
    "pyzbar>=0.1.9",  # Giải mã QR code và barcode
    "numpy>=1.24.0",  # Xử lý ảnh (cho opencv)
    "pyperclip>=1.8.2",  # Hỗ trợ clipboard
]

# Phân loại dự án
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

# URL liên quan đến dự án
[project.urls]
Homepage = "https://github.com/VHN-DEV/myPythonTool"
Documentation = "https://github.com/VHN-DEV/myPythonTool/blob/main/README.md"
Repository = "https://github.com/VHN-DEV/myPythonTool"
Changelog = "https://github.com/VHN-DEV/myPythonTool/blob/main/docs/CHANGELOG.md"

# Entry points - Tạo command "myptool"
# Khi gõ "myptool" ở bất kỳ đâu, sẽ chạy hàm main() trong menus/__init__.py
[project.scripts]
myptool = "menus:main"

# Optional dependencies cho các tính năng mở rộng
[project.optional-dependencies]
archive = [
    "py7zr>=0.20.0",
    "rarfile>=4.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
all = [
    "py7zr>=0.20.0",
    "rarfile>=4.0",
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

# Cấu hình setuptools
[tool.setuptools]
# Tự động tìm tất cả packages (bao gồm cả namespace packages trong tools/)
packages = {find = {}}

# Bao gồm cả các subpackages trong tools/
[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.txt"]

